kubernetes/apps/network/nas-services/proxies/nas.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  type: ExternalName
  externalName: "192.168.1.80"
  ports:
    - name: jellyfin
      protocol: TCP
      port: 8096
    - name: navidrome
      protocol: TCP
      port: 4533
    - name: synology
      protocol: TCP
      port: 5999
    - name: minio
      protocol: TCP
      port: 9001
    - name: s3
      protocol: TCP
      port: 9000
