kubernetes/apps/network/nas-services/proxies/truenas.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
spec:
  type: ExternalName
  externalName: "truenas.${INTERNAL_DOMAIN}"
  ports:
    - name: admin
      protocol: TCP
      port: 80
