kubernetes/apps/network/nas-services/proxies/jellyfin.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    ingress.kubernetes.io/preserve-host: "true"
  name: jellyfin
spec:
  ingressClassName: external
  rules:
    - host: "jellyfin.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: jellyfin
            path: /
            pathType: Prefix
