kubernetes/apps/network/nas-services/proxies/minio.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    ingress.kubernetes.io/preserve-host: "true"
  name: minio
spec:
  ingressClassName: external
  rules:
    - host: "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: minio
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    ingress.kubernetes.io/preserve-host: "true"
  name: s3
spec:
  ingressClassName: external
  rules:
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: s3
            path: /
            pathType: Prefix
