kubernetes/apps/network/nas-services/proxies/navidrome.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
  name: navidrome
spec:
  ingressClassName: external
  rules:
    - host: "navidrome.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: navidrome
            path: /
            pathType: Prefix
