kubernetes/apps/network/nas-services/proxies/synology.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology
spec:
  hostnames:
    - synology.${LIMITED_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: nas
          port: 5999
      matches:
        - path:
            type: PathPrefix
            value: /
