kubernetes/apps/network/nas-services/proxies/synology.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
  name: synology
spec:
  ingressClassName: internal
  rules:
    - host: "synology.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  name: synology
            path: /
            pathType: Prefix
