kubernetes/apps/network/nas-services/proxies/truenas.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    ingress.kubernetes.io/preserve-host: "true"
  name: truenas
spec:
  ingressClassName: internal
  rules:
    - host: "truenas.${LIMITED_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: truenas
                port:
                  name: admin
            path: /
            pathType: Prefix
