kubernetes/apps/network/nas-services/proxies/truenas.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
spec:
  hostnames:
    - truenas.${LIMITED_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network

  rules:
    - backendRefs:
        - name: truenas
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: admin
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  labels:
    kubernetes.io/service-name: truenas
addressType: FQDN
ports:
  - name: admin
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "truenas.${INTERNAL_DOMAIN}"
